# libpyronia

./: .gitignore  .gitmodules  LICENSE  README.md  generate-pyr-policy-template.py  install.sh
apps/alexa/: alexa.prof  alexa.py  attack_lib.py  auth_web.py
apps/aws-moisture-sensor/: df401a2b29-private.pem.key
apps/hello/: hello.prof  hello.py
apps/plant_watering/: attacklib.py  attacklib_native.c  df401a2b29-public.pem.key  moisture.prof  (+1 more)
benchmarks/: hello-latency  latency_overhead.py  openalpr_test-latency
libraries/libpyronia/: CMakeLists.txt  pyronia_lib.c  pyronia_lib.h
libraries/libpyronia/testsuite/: home.pyronia.kernel_upcall_test  kernel_upcall_test.c  testutil.h
libraries/libsmv/: CMakeLists.txt  kernel_comm.c  kernel_comm.h  memdom_lib.c  memdom_lib.h  smv_lib.c
libraries/libsmv/testcases/: memdom_grant_revoke_fault.c  memdom_no_privs_fault.c  memdom_write_fault.c  memdom_write_implies_read.c  per_smv_memdom_fault.c  privs_t1.c  smvthread_multi_fault.c  smvthread_ops_tests.c  tc_smvthread_create.c
libsmv/: CMakeLists.txt  Makefile  kernel_comm.c  kernel_comm.h  mem_benchmarking_util.c  mem_benchmarking_util.h  memdom_lib.c  memdom_lib.h  smv_lib.c  smv_lib.h
parser/: Makefile  apparmor.7  apparmor.7.html  apparmor.d.5  apparmor_parser.8  apparmor_parser.8.html  apparmor_parser.pod  parser.conf  parser_interface.c  pyronia.7  pyronia.d.5  pyronia.d.5.html  pyronia.d.pod  rc.pyronia.redhat  subdomain.conf.5  subdomain.conf.5.html  techdoc.aux  techdoc.toc
profiles/: Makefile
scripts/: install_smv  load_test_profiles  run_lsm_tests  run_pyr_tests  run_server  run_smv_tests  setup_pyronia_testing
src/: CMakeLists.txt  benchmarking_util.c  benchmarking_util.h  memdom_avl_tree.c  memdom_avl_tree.h  policy_avl_tree.c  policy_avl_tree.h  pyronia_lib.c  pyronia_lib.h  security_context.c  security_context.h  serialization.c  serialization.h  si_comm.c  si_comm.h  stack_log.h  stack_log_wrappers.c  util.h
testsuite/: callgraph_perms_fail_test.c  critical_state_alloc_test.c  file_access_test.c  home.pyronia.callgraph_perms_fail_test  home.pyronia.callgraph_perms_fail_test-lib.prof  home.pyronia.critical_state_alloc_test  home.pyronia.critical_state_alloc_test-lib.prof  home.pyronia.file_access_test  home.pyronia.file_access_test-lib.prof  home.pyronia.kernel_upcall_test  home.pyronia.kernel_upcall_test-lib.prof  home.pyronia.network_access_test  home.pyronia.network_access_test-lib.prof  home.pyronia.si_thread_test  home.pyronia.si_thread_test-lib.prof  kernel_upcall_test.c  network_access_test.c  si_thread_test.c  testutil.h
utils/: Makefile  aa-audit.8  aa-audit.8.html  aa-autodep.8.html  aa-cleanprof.pod  aa-complain.8  aa-decode.8.html  aa-easyprof  aa-easyprof.8.html  aa-enforce.8.html  aa-genprof.8  aa-logprof  aa-logprof.8.html  aa-mergeprof  aa-mergeprof.8.html  aa-mergeprof.pod  aa-notify.8  aa-notify.8.html  aa-sandbox  aa-status  aa-status.8.html  aa-unconfined  python-tools-setup.py
(+108 files in other folders)
